Added 2 new 3D models

--- a/Projetos/t1.ipynb
+++ b/Projetos/t1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Hearth(Object3D):\n",
+    "class Heart(Object3D):\n",
     "    def __init__(self):\n",
     "        super().__init__() \n",
     "        self.tx, self.ty, self.tz = 0.4, 0.3, 0.0\n",
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,9 +372,9 @@
     "        self.sx, self.sy, self.sz =  0.20,  0.30, 0.20\n",
     "        \n",
     "        self.colors = [\n",
-    "                [(1.0, 0.0, 0.0, 1.0), (1.0, 0.5, 0.31, 1.0)],\n",
-    "                [(1.0, 0.84, 0.0, 1.0), (1.0, 1.0, 0.0, 1.0)]\n",
-    "            ]\n",
+    "            [(1.0, 0.0, 0.0, 1.0), (1.0, 0.5, 0.31, 1.0)],\n",
+    "            [(1.0, 0.84, 0.0, 1.0), (1.0, 1.0, 0.0, 1.0)]\n",
+    "        ]\n",
     "    \n",
     "    def draw_object(self):\n",
     "        mat_model = model(self.tx, self.ty, self.tz, \n",
@@ -404,6 +404,95 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Clubs(Object3D):\n",
+    "    def __init__(self):\n",
+    "        super().__init__() \n",
+    "        self.tx, self.ty, self.tz = -0.40, 0.60, 0.00\n",
+    "        self.sx, self.sy, self.sz =  0.20,  0.30, 0.15\n",
+    "        \n",
+    "        self.colors = [\n",
+    "                [(0.0, 0.0, 0.0, 1.0), (0.1, 0.1, 0.1, 1.0)],\n",
+    "            [(1.0, 0.84, 0.0, 1.0), (1.0, 1.0, 0.0, 1.0)]\n",
+    "            ]\n",
+    "    \n",
+    "    def draw_object(self):\n",
+    "        mat_model = model(self.tx, self.ty, self.tz, \n",
+    "                          self.rx, self.ry, self.rz, \n",
+    "                          self.sx, self.sy, self.sz)\n",
+    "        \n",
+    "        loc_model = glGetUniformLocation(program, \"model\")\n",
+    "        loc_color = glGetUniformLocation(program, \"color\")\n",
+    "        \n",
+    "        glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "        \n",
+    "        glUniform4f(loc_color, \n",
+    "                    self.colors[self.select][0][0], \n",
+    "                    self.colors[self.select][0][1], \n",
+    "                    self.colors[self.select][0][2], \n",
+    "                    self.colors[self.select][0][3])\n",
+    "        for i in range(0, 42, 3):\n",
+    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_CLUBS + i, 3)\n",
+    "\n",
+    "        glUniform4f(loc_color, \n",
+    "                    self.colors[self.select][1][0], \n",
+    "                    self.colors[self.select][1][1], \n",
+    "                    self.colors[self.select][1][2], \n",
+    "                    self.colors[self.select][1][3])\n",
+    "        for i in range(42, 132, 3):\n",
+    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_CLUBS + i, 3)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dice(Object3D):\n",
+    "    def __init__(self):\n",
+    "        super().__init__() \n",
+    "        self.tx, self.ty, self.tz = 0.00, -0.70, 0.00\n",
+    "        self.sx, self.sy, self.sz =  0.15,  0.15, 0.15\n",
+    "        \n",
+    "        self.colors = [\n",
+    "                [(0.0, 0.0, 0.0, 1.0), (0.1, 0.1, 0.1, 1.0)],\n",
+    "            [(1.0, 0.84, 0.0, 1.0), (1.0, 1.0, 0.0, 1.0)]\n",
+    "            ]\n",
+    "    \n",
+    "    def draw_object(self):\n",
+    "        mat_model = model(self.tx, self.ty, self.tz, \n",
+    "                          self.rx, self.ry, self.rz, \n",
+    "                          self.sx, self.sy, self.sz)\n",
+    "        \n",
+    "        loc_model = glGetUniformLocation(program, \"model\")\n",
+    "        loc_color = glGetUniformLocation(program, \"color\")\n",
+    "        \n",
+    "        glUniformMatrix4fv(loc_model, 1, GL_TRUE, mat_model)\n",
+    "        \n",
+    "        glUniform4f(loc_color, \n",
+    "                    self.colors[self.select][0][0], \n",
+    "                    self.colors[self.select][0][1], \n",
+    "                    self.colors[self.select][0][2], \n",
+    "                    self.colors[self.select][0][3])\n",
+    "        for i in range(0, 30, 3):\n",
+    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_DICE + i, 3)\n",
+    "\n",
+    "        glUniform4f(loc_color, \n",
+    "                    self.colors[self.select][1][0], \n",
+    "                    self.colors[self.select][1][1], \n",
+    "                    self.colors[self.select][1][2], \n",
+    "                    self.colors[self.select][1][3])\n",
+    "        for i in range(30, 60, 3):\n",
+    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_DICE + i, 3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,13 +538,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hearths = Hearth()\n",
+    "hearts = Heart()\n",
     "spades = Spades()\n",
     "diamonds = Diamonds()\n",
+    "clubs = Clubs()\n",
+    "dice = Dice()\n",
     "\n",
     "tx, ty = 0.0, 0.0\n",
     "rx, ry = 0.0, 0.0\n",
@@ -468,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,16 +569,21 @@
     "    \n",
     "    if action == glfw.PRESS:\n",
     "        if key == glfw.KEY_1:\n",
-    "            select_obj = hearths\n",
+    "            select_obj = clubs\n",
     "        elif key == glfw.KEY_2:\n",
-    "            select_obj = spades\n",
+    "            select_obj = hearts\n",
     "        elif key == glfw.KEY_3:\n",
+    "            select_obj = spades\n",
+    "        elif key == glfw.KEY_4:\n",
     "            select_obj = diamonds\n",
+    "        elif key == glfw.KEY_5:\n",
+    "            select_obj = dice\n",
+    "            \n",
     "                            \n",
     "        if select_obj != None:\n",
     "            select_obj.set_select(1)\n",
     "    \n",
-    "            for obj in [hearths, spades, diamonds]:\n",
+    "            for obj in [hearts, spades, diamonds, clubs, dice]:\n",
     "                if obj != select_obj:\n",
     "                    obj.set_select(0)\n",
     "                                \n",
@@ -541,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +665,7 @@
     "        select_obj.draw_object()\n",
     "        \n",
     "    \n",
-    "    for obj in [hearths, spades, diamonds]:\n",
+    "    for obj in [hearts, spades, diamonds, clubs, dice]:\n",
     "        obj.update_rotate(rx=0.0, ry=obj.angle, rz=0.0)\n",
     "        obj.draw_object()\n",
     "    \n",
@@ -582,7 +678,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -600,5 +696,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
