--- a/Projetos/proj1.ipynb
+++ b/Projetos/proj1.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 22,
-=======
    "execution_count": 1,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,11 +25,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 23,
-=======
-   "execution_count": 3,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,11 +107,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 24,
-=======
-   "execution_count": 5,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,11 +274,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 30,
-=======
-   "execution_count": 6,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,11 +302,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 31,
-=======
-   "execution_count": 7,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,11 +364,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 32,
-=======
-   "execution_count": 8,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,11 +441,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 33,
-=======
-   "execution_count": 9,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,11 +489,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 34,
-=======
-   "execution_count": 10,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,11 +536,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 35,
-=======
-   "execution_count": 11,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,12 +717,15 @@
     "                    self.colors[self.select][1][3])\n",
     "        for i in range(42, 132, 3):\n",
     "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_CLUBS + i, 3)\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        self.__init__()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +764,10 @@
     "                    self.colors[self.select][1][2], \n",
     "                    self.colors[self.select][1][3])\n",
     "        for i in range(30, 60, 3):\n",
-    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_DICE + i, 3)"
+    "            glDrawArrays(GL_TRIANGLE_STRIP, SET_POSITION_DICE + i, 3)\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        self.__init__()"
    ]
   },
   {
@@ -811,11 +781,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 38,
-=======
-   "execution_count": 15,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,20 +823,12 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Objetos que serão desenhados\n",
-    "hearths = Hearth()\n",
-=======
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hearts = Heart()\n",
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+    "hearths = Heart()\n",
     "spades = Spades()\n",
     "diamonds = Diamonds()\n",
     "clubs = Clubs()\n",
@@ -885,11 +843,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 40,
-=======
-   "execution_count": 18,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,36 +855,21 @@
     "        if key == glfw.KEY_1:\n",
     "            select_obj = clubs\n",
     "        elif key == glfw.KEY_2:\n",
-<<<<<<< HEAD
     "            select_obj = hearths\n",
-=======
-    "            select_obj = hearts\n",
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
     "        elif key == glfw.KEY_3:\n",
     "            select_obj = spades\n",
     "        elif key == glfw.KEY_4:\n",
     "            select_obj = diamonds\n",
-<<<<<<< HEAD
     "        elif key == glfw.KEY_4:\n",
     "            select_obj = spades\n",
     "        elif key == glfw.KEY_5:\n",
     "            select_obj = dice\n",
-=======
-    "        elif key == glfw.KEY_5:\n",
-    "            select_obj = dice\n",
-    "            \n",
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
     "                            \n",
     "        # Se um objeto foi selecionado, ele é marcado como selecionado (set_select(1)),\n",
     "        # e os demais objetos têm sua seleção removida (set_select(0)).\n",
     "        if select_obj != None:\n",
     "            select_obj.set_select(1)\n",
-<<<<<<< HEAD
     "            for obj in [hearths, spades, diamonds, clubs, dice]:\n",
-=======
-    "    \n",
-    "            for obj in [hearts, spades, diamonds, clubs, dice]:\n",
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
     "                if obj != select_obj:\n",
     "                    obj.set_select(0)\n",
     "                                \n",
@@ -997,11 +936,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 41,
-=======
-   "execution_count": 19,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,11 +945,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 42,
-=======
-   "execution_count": 20,
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,12 +957,8 @@
     "    glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT)    \n",
     "    glClearColor(1.0, 1.0, 1.0, 1.0)\n",
     "    \n",
-<<<<<<< HEAD
     "    # Itera sobre a lista de objetos a serem desenhados\n",
     "    for obj in [hearths, spades, diamonds, clubs, dice]:\n",
-=======
-    "    for obj in [hearts, spades, diamonds, clubs, dice]:\n",
->>>>>>> 21553897de43cd14778f1e78c7ce60b1cc674924
     "        obj.update_rotate(rx=0.0, ry=obj.angle, rz=0.0)\n",
     "        obj.draw_object()\n",
     "    \n",
