--- a/Listas/contas.ipynb
+++ b/Listas/contas.ipynb
@@ -138,6 +138,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "T = np.array([\n",
+    "    [1, 0,  0],\n",
+    "    [0, 1, -8],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
+    "\n",
+    "p = np.array([\n",
+    "    [27],\n",
+    "    [4],\n",
+    "    [1]               \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[27],\n",
+       "       [-4],\n",
+       "       [ 1]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T @ p"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
