--- a/Listas/contas.ipynb
+++ b/Listas/contas.ipynb
@@ -138,6 +138,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "T1 = np.array([\n",
+    "    [1, 0, -8],\n",
+    "    [0, 1, -8],\n",
+    "    [0, 0, 1]\n",
+    "])\n",
+    "\n",
+    "T2 = np.array([\n",
+    "    [1, 0,  0],\n",
+    "    [0, 1, -8],\n",
+    "    [0, 0,  1]\n",
+    "])\n",
+    "\n",
+    "p = np.array([\n",
+    "    [8],\n",
+    "    [8],\n",
+    "    [1]               \n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0],\n",
+       "       [-8],\n",
+       "       [ 1]])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T2 @ T1 @ p "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -160,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
