--- a/Listas/contas.ipynb
+++ b/Listas/contas.ipynb
@@ -138,6 +138,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.]\n",
+      " [ 1.]\n",
+      " [-4.]\n",
+      " [ 1.]]\n",
+      "[[-0.5]\n",
+      " [ 0. ]\n",
+      " [-4.5]\n",
+      " [ 1. ]]\n",
+      "[[ 0.5]\n",
+      " [ 0. ]\n",
+      " [-4.5]\n",
+      " [ 1. ]]\n",
+      "[[-0.5]\n",
+      " [ 0. ]\n",
+      " [-3.5]\n",
+      " [ 1. ]]\n",
+      "[[ 0.5]\n",
+      " [ 0. ]\n",
+      " [-3.5]\n",
+      " [ 1. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "T = np.array([\n",
+    "    [1,  0, 0,  0],\n",
+    "    [0,  1, 0,  0],\n",
+    "    [0,  0, 1, -4],\n",
+    "    [0,  0, 0,  1]\n",
+    "])\n",
+    "\n",
+    "p = np.array([\n",
+    "    [0   , 1,    0, 1],\n",
+    "    [-0.5, 0, -0.5, 1],\n",
+    "    [ 0.5, 0, -0.5, 1],\n",
+    "    [-0.5, 0,  0.5, 1],\n",
+    "    [ 0.5, 0,  0.5, 1]\n",
+    "])\n",
+    "\n",
+    "for i in p:\n",
+    "    print(T @ i.reshape((4,1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
