--- a/Projeto2/proj2.ipynb
+++ b/Projeto2/proj2.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
     "glfw.window_hint(glfw.VISIBLE, glfw.FALSE)\n",
     "\n",
     "# Configurações da janela\n",
-    "WIDTH  = 1600\n",
+    "WIDTH  = 1900\n",
     "HEIGHT = 1200\n",
     "\n",
     "window = glfw.create_window(WIDTH, HEIGHT, \"Medieval\", None, None)\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +288,6 @@
     "        # Se não tem valores ignore\n",
     "        if not values: \n",
     "            continue\n",
-    "\n",
     "\n",
     "        # Recupera os vertices\n",
     "        if values[0] == 'v':\n",
@@ -327,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +379,7 @@
     "# Nome dos modelos para definição dos caminhos\n",
     "paths = ['house', 'shield', 'anvil',\n",
     "         'spears', 'ground', 'sky',\n",
-    "         'tree', 'monster', 'cannon']\n",
+    "         'tree', 'monster', 'albedo']\n",
     "\n",
     "# Listas auxiliares que serão armazenadas as coordenadas\n",
     "vertices_list = []    \n",
@@ -414,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,9 +696,9 @@
     "class Camera():\n",
     "    def __init__(self):\n",
     "        self.camera_speed    = 0.5\n",
-    "        self.camera_position = glm.vec3(0.0)\n",
-    "        self.camera_front    = glm.vec3(0.0,  0.0, -1.0)\n",
-    "        self.camera_up       = glm.vec3(0.0,  1.0,  0.0)\n",
+    "        self.camera_position = glm.vec3(0.0, 1.0,  0.0)\n",
+    "        self.camera_front    = glm.vec3(0.0, 0.0, -1.0)\n",
+    "        self.camera_up       = glm.vec3(0.0, 1.0,  0.0)\n",
     "\n",
     "camera = Camera()\n",
     "\n",
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,20 +735,6 @@
     "        # Seleção de objetos 3D com as teclas para facilitar \n",
     "        # a distribuição dos objetos na cena\n",
     "        if key == glfw.KEY_1:\n",
-    "            select_obj = house\n",
-    "        elif key == glfw.KEY_2:\n",
-    "            select_obj = shield\n",
-    "        elif key == glfw.KEY_3:\n",
-    "            select_obj = anvil\n",
-    "        elif key == glfw.KEY_4:\n",
-    "            select_obj = spears\n",
-    "        elif key == glfw.KEY_5:\n",
-    "            select_obj = ground\n",
-    "        elif key == glfw.KEY_6:\n",
-    "            select_obj = tree\n",
-    "        elif key == glfw.KEY_7:\n",
-    "            select_obj = sky    \n",
-    "        elif key == glfw.KEY_8:\n",
     "            select_obj = albedo \n",
     "        elif key == glfw.KEY_R:\n",
     "            rotate_mode = not rotate_mode\n",
@@ -854,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +871,7 @@
     "        sky.update_rotate(rx=0.0, ry=1.0, rz=0.0, angle=0.001)  # Rotaciona ao longo do eixo Y\n",
     "\n",
     "    # Define a escala dos objetos 'monster' com base no modo 'berserk'\n",
-    "    monster_scale = 0.8 if berserk_mode else 0.4\n",
+    "    monster_scale = 0.4 if berserk_mode else 0.2\n",
     "    \n",
     "    # Atualiza a escala de cada monstro na lista de acordo com o modo atual\n",
     "    for monster in monster_list:\n",
